--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								loggedIn = true
 								initBody()
 							} else {
-								alert("failed to login")
+								console.log("received unknown message from server while login")
 							}
 						}
 					}
@@ -39,13 +39,21 @@
 					"http://192.168.178.69:8080/swxercise/rest/v1/user/logout",
 					{
 						type: 'POST',
+						data: JSON.stringify({
+							username: "admin",
+							password: "admin"
+						}),
+						processData: false,
+						contentType: 'application/json',
 						success: function(data, textStatus) {
-							if (data && data.responseText && data.responseText === "Success") {
+							if (data
+									&& data.responseText
+									&& data.responseText === "Success") {
 								console.log("logged out")
 								loggedIn = false
 								initBody()
 							} else {
-								alert("failed to logout")
+								console.log("received unknown message from server while logout")
 							}
 						}
 					}
